<resources>
    <string name="app_name">Polyshift</string>
    <string name="gcm_sender_id">824705675468</string>
    <string name="title_activity_polyshift">PolyshiftActivity</string>
    <string name="title_poly_shift">Polyshift</string>
    <string name="login">Login</string>
    <string name="signup">Registrieren</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="title_activity_signup">Registrieren</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="logo">Polyshift logo</string>
    <string name="name">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="email">E-Mail</string>
    <string name="new_opponent">Neuer Gegner</string>
    <string name="forward">weiter</string>
    <string name="contacts_new_textfield_username">Benutzername</string>
    <string name="opponents_attending_title">Neuer Gegner</string>
    <string name="dialog_opponent_handling">Spiel startet</string>
    <string name="opponent_confirm">bestätigen</string>
    <string name="opponent_decline">ablehnen</string>
    <string name="new_game">Neues Spiel</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="challenge">%1$s herausfordern?</string>
    <string name="yes">Ja</string>
    <string name="challenged">%1$s hat dich herausgefordert!</string>
    <string name="game_created">"Spiel wurde erstellt. Warte auf Bestätigung durch %1$s."</string>
    <string name="game_exists">"Du spielst bereits gegen %1$s."</string>
    <string name="OK">OK</string>
    <string name="game_could_not_be_created">Es ist ein Fehler aufgetreten. Das Spiel konnte nicht erstellt werden.</string>
    <string name="No">Nein</string>
    <string name="not_logged_in">Du bist nicht eingeloggt.</string>
    <string name="successfully_logged_in">%1$s wurde erfolgreich angemeldet.</string>
    <string name="already_logged_in">Du bist bereits angemeldet.</string>
    <string name="login_error">Der Benutzer wurde nicht gefunden oder das Passwort ist falsch.</string>
    <string name="connection_error">Ein Verbindungsfehler ist aufgetreten.</string>
    <string name="login_error_title">Login Error</string>
    <string name="awaiting_acception">Warten auf Annahme.</string>
    <string name="your_turn">Du bist dran!</string>
    <string name="opponents_turn">%1$s ist dran.</string>
    <string name="days">"Tage"</string>
    <string name="hours">"Std"</string>
    <string name="minutes">"Min"</string>
    <string name="seconds">"Sek"</string>
    <string name="rule_one">Bewege einen Spielstein, indem du ihn mit dem Finger berührst und verschiebst. Du kannst den Spielstein auch durch vorheriges Antippen markieren. Bewege anschließend den blauen Spieler. Sollen weitere Regeln angezeigt werden?</string>
    <string name="rule_two">Der Spielstein, der in der Runde zuvor bewegt wurde, kann jetzt nicht mehr bewegt werden.</string>
    <string name="rule_three">Du kannst entweder einen Spielstein oder direkt deinen Spieler bewegen. Sobald dein Spieler bewegt wurde, ist die Runde beendet.</string>
    <string name="rule_four">Trifft ein Spieler auf eine Ecke, dann wird seine Bewegung entlang der Ecke fortgesetzt. Eine Ecke kann aus einem oder mehreren Spielsteinen, einem Spielstein und einem Spieler oder dem Spielfeldrand bestehen. Ziel ist es, auf diese Weise den anderen Spielfeldrand zu erreichen.</string>
    <string name="rule_five">Trifft dein Spieler in gerader Bewegung auf den anderen Spieler, dann wird dieser angestoßen. Anschließend bist du noch einmal dran.</string>
    <string name="rule_six">Das wars schon. Jetzt versuche das Spiel zu gewinnen, indem du deinen Spieler zum blauen Spielfeldrand bewegst.</string>
    <string name="please_enter_email">bitte gib deine E-Mail Adresse ein.</string>
    <string name="email_address">E-Mail Adresse</string>
    <string name="email_title">Neues Passwort</string>
    <string name="error_loading_opponents">Beim Abrufen der Gegner ist ein Fehler aufgetreten.</string>
    <string name="user_not_found">Der Benutzer wurde nicht gefunden.</string>
    <string name="do_not_add_yourself">Du kannst dich nicht selbst als Gegner hinzufügen.</string>
    <string name="already_sent">Du hast bereits eine Anfrage an %1$s gesendet.</string>
    <string name="already_opponent">%1$s ist bereits unter deinen Gegnern.</string>
    <string name="invitation_sent">Es wurde eine Anfrage an %1$s gesendet. Sobald die Anfrage bestätgt wurde, wird %1$s unter deinen Gegnern aufgeführt.</string>
    <string name="first_time">Du startest Polyshift zu ersten Mal. Möchtest du das Tutorial starten, um dich mit den Spielregeln vertraut zu machen?</string>
    <string name="start_tutorial_later">Du kannst das Tutorial jederzeit starten, indem du auf das Polyshift Logo tippst.</string>
    <string name="how_to_start_game">Um ein neues Spiel zu starten, auf einen Gegner klicken.</string>
    <string name="game_is_created">Spiel wird erstellt</string>
    <string name="new_password_text">"Dein neues Polyshift Passwort lautet: "</string>
    <string name="regards">Besten Gruss</string>
    <string name="footer">Dein Polyshift-Team</string>
    <string name="new_password">Neues Passwort</string>
    <string name="new_password_sent">Es wurde ein neues Passwort an die von dir angegebene E-Mail Adresse gesendet.</string>
    <string name="error">Fehler</string>
    <string name="password_not_created">Es konnte kein neues Passwort erstellt werden.</string>
    <string name="no_user_found">Es wurde kein Benutzer mit dieser E-Mail Adresse gefunden.</string>
    <string name="send_reminder">Möchtest du %1$s eine Erinnerung schicken?</string>
    <string name="opponent_waiting">%1$s wartet auf einen Spielzug von dir."</string>
    <string name="start_game">Nein, Spiel starten</string>
    <string name="send_acceptance_reminder">Möchtest du %1$s eine Erinnerung schicken?</string>
    <string name="login_in_progress">Login läuft</string>
    <string name="no_username_entered">Kein Benutzername angegeben</string>
    <string name="no_email_entered">Keine E-Mail-Adresse angegeben</string>
    <string name="email_not_valid">Ungültige E-Mail-Adresse</string>
    <string name="no_password_entered">Kein Passwort angegeben</string>
    <string name="passwords_do_not_match">Passwörter stimmen nicht überein</string>
    <string name="successfully_registered">Registrierung erfolgreich.</string>
    <string name="username_already_exists">Der Benutzername ist bereits vergeben.</string>
    <string name="email_already_exists">Die E-Mail Adresse ist bereits vergeben.</string>
    <string name="please_try_again_later">Bitte versuche es später erneut.</string>
    <string name="highscores">Bestenliste</string>
    <string name="scores_are_loading">Statistiken werden geladen</string>
    <string name="error_loading_scores">Beim Abrufen der Statistiken ist ein Fehler aufgetreten.</string>
    <string name="opponents_saved">Gegner wurden gespeichert.</string>
    <string name="at_least_one_opponent_not_saved">Mindestens ein Gegner konnte nicht gespeichert werden.</string>
    <string name="you_have_been_added">%1$s hat dich hinzugefügt. %1$s jetzt harausfordern?</string>
    <string name="request_sent">%1$s möchte dich als Gegner hinzufügen.</string>
    <string name="error_loading_games">Beim Abrufen der Spiele ist ein Fehler aufgetreten.</string>
    <string name="click_game_to_start">Zum Starten auf ein Spiel klicken.</string>
    <string name="my_games">Meine Spiele</string>
    <string name="game_are_loading">Spiele werden geladen</string>
    <string name="no">Nein</string>
    <string name="error_loading_game_status">Beim Laden des Spielstandes ist ein Fehler aufgetreten.</string>
    <string name="error_downloading_game">Beim Laden des Spielfeldes ist ein Fehler aufgetreten. Bitte prüfe, ob deine Version von Polyshift auf dem neuesten Stand ist.</string>
    <string name="crearing_game">Spiel wird erstellt</string>
    <string name="accepted_your_challenge">" hat deine Herausforderung angenommen"</string>
    <string name="challenge_accepted">Herausforderung wurde angenommen. Spiel wird gestartet.</string>
    <string name="game_is_starting">Spiel wird gestartet</string>
    <string name="game_could_not_be_started">Das Spiel konnte nicht gestartet werden.</string>
    <string name="my_opponents">Meine Gegner</string>
    <string name="opponents_are_loading">Gegner werden geladen</string>
    <string name="add_user_name">Wenn du in der Bestenliste erscheinen möchtest, gib hier deinen Namen ein:</string>
    <string name="has_won">" hat das Spiel gewonnen."</string>
    <string name="move_token_or_player">Bewege einen Spielstein oder deinen Spieler.</string>
    <string name="move_player">Bewege deinen Spieler.</string>
    <string name="game_data_is_loading">Spieldaten werden geladen</string>
    <string name="game_is_closing">Spiel wird beendet</string>
    <string name="game_is_saving">Spiel wird gespeichert.</string>
    <string name="blues_turn">Blau ist dran.</string>
    <string name="reds_turn">Rot ist dran.</string>
    <string name="red">Rot</string>
    <string name="blue">Blau</string>
    <string name="has_done_a_move">" hat einen Spielzug gemacht."</string>
    <string name="privacypolicy">"Datenschutzerklärung\n\n"</string>
    <string name="general_disclaimer">"Polyshift erhebt personenbezogene Daten und speichert diese übe einen unbefristeten Zeitraum. Dabei handelt es sich um die E-Mail Adresse des Nutzers. Diese wird gespeichert, um dem Nutzer im Bedarfsfall ein neues Passwort zukommen zu lassen. Die E-Mail Adresse wird lediglich zu diesem Zweck gespeichert und nicht an Dritte weitergegeben. Wünscht der Nutzer die Löschung seiner Daten, kann dies über eine E-Mail an service@polyshift.de angefordert werden.\n\n"</string>
    <string name="analytics_disclaimer">Polyshift benutzt Google Analytics, einen Webanalysedienst der Google Inc. („Google“).
                  Google Analytics verwendet sog. „Cookies“, Textdateien, die auf Ihrem Computer gespeichert werden
                  und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten
                  Informationen über Ihre Benutzung dieser Website werden in der Regel an einen Server von Google in den
                  USA übertragen und dort gespeichert. Im Falle der Aktivierung der IP-Anonymisierung auf dieser Webseite,
                  wird Ihre IP-Adresse von Google jedoch innerhalb von Mitgliedstaaten der Europäischen Union oder in
                  anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum zuvor gekürzt. Nur in
                  Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA übertragen und dort
                  gekürzt. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre
                  Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten zusammenzustellen und um weitere
                  mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber dem Appbetreiber
                  zu erbringen. Die im Rahmen von Google Analytics von Ihrem Browser übermittelte IP-Adresse wird nicht mit
                  anderen Daten von Google zusammengeführt."</string>
</resources>